<resources>
    <string name="app_name">Mobile-Tem-Vagas</string>

    <!--    Campos de login do usuário-->
    <string name="hint_usuario">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="txt_button_entrar">Entrar</string>
    <string name="txt_tela_cadastro">Não tem conta? cadastre-se!</string>

    <!--    campos de tela principal-->
    <string name="more" />
    <string name="_395">395</string>
    <string name="tem_vagas">tem vagas</string>
    <string name="capitao_poco">capitao_poco</string>
    <string name="first_fragment_label">Rótulo do Primeiro Fragmento</string>
    <string name="second_fragment_label">Rótulo do Segundo Fragmento</string>
    <string name="hint_anuncie">ANUNCIE AQUI!</string>
    <string name="txt_button_cadastrar">Your Button Text</string>

    <!--    Campos de cadastro de usuário -->
    <string name="hint_nome_completo">Nome Completo</string>
    <string name="hint_matricula">Matrícula</string>
    <string name="hint_email">E-mail</string>
    <!--    foi usado no cadastro de usuario a mesma string de SENHA de login -->
    <string name="hint_telefone">Telefone</string>
    <string name="txt_cadastro_de_usuario">Cadastro de usuário</string>
    <string name="hint_cadastrar">Cadastrar</string>
    <string name="hint_voltar">Voltar</string>

    <!--    Campos de cadastro de recomendação -->
    <string name="txt_cadastrorecomendacoes">Cadastro de recomendações</string>
    <string name="hint_nomeproprietario">Nome do proprietário</string>
    <string name="hint_telProprietario">Telefone do proprietário</string>
    <string name="hint_endereco">Endereço</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_numcasa">Número da casa</string>
    <string name="hint_preco">Preço do imóvel</string>
    <string name="hint_comodos">Informe os comodos existentes</string>
    <string name="hint_camera">Adicione aqui a foto do imóvel</string>
    <string name="hint_adicionar">Registrar recomendação</string>

    <string name="channel_name">TemVagasChannel</string>
    <string name="channel_description">Canal para notificações do Tem Vagas</string>
    <string name="notification_title">TEM VAGAS</string>
    <string name="notification_text">Seu cadastro foi realizado, seja bem-vindo!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>