<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Telaprincipal">

    <View
        android:id="@+id/viewHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_125sdp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/textTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/_16sdp"-->
<!--        android:layout_marginLeft="@dimen/_16sdp"-->
<!--        android:layout_marginTop="@dimen/_16sdp"-->
<!--        android:text="@string/tem_vagas"-->
<!--        android:textColor="@color/whit"-->
<!--        android:textSize="@dimen/_20ssp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"/>-->


    <!-- MapView -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAnuncio"
        android:layout_width="167dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_buttom_yellow"
        android:enabled="true"
        android:padding="15dp"
        android:text="@string/hint_anuncie"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/viewHeaderBackground"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="@+id/viewHeaderBackground"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,NotSibling" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btVerLocalizacao"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/backgrount_button_selector"
        android:enabled="true"
        android:padding="15dp"
        android:text="Ver Minha Localização"
        android:textAllCaps="false"
        android:onClick="buscarInformacaoGPS"
        app:layout_constraintEnd_toEndOf="@+id/viewHeaderBackground"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewHeaderBackground" />


    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btVerLocalizacao"
        android:visibility="gone" />

    <!-- Botão para ocultar/mostrar o mapa -->


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@+id/viewHeaderBackground"
        app:layout_constraintTop_toBottomOf="@id/viewHeaderBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_14sdp">
            <TextView
                android:id="@+id/textViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Destaques"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <LinearLayout
                android:id="@+id/layoutClients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/layoutImpacted"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViews">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_clients"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="clientes"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_395"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutImpacted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/layoutFollowing"
                app:layout_constraintStart_toEndOf="@id/layoutClients"
                app:layout_constraintTop_toBottomOf="@id/textViews">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_casas"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="Casas"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="147"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutFollowing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutImpacted"
                app:layout_constraintTop_toBottomOf="@id/textViews">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/ic_clients"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="following"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="820"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_16sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHeader"
        android:background="@color/card_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/dashbord_item_1"/>
            <include layout="@layout/dashbord_item_2"/>
            <include layout="@layout/dashbord_item_3"/>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>